--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p>Chào thầy cô đã tới dự buổi báo cáo của nhóm chúng em hôm na y</p>
+    <p>Chào thầy cô đã tới dự buổi báo cáo của nhóm chúng em hôm nay xxxxxxx</p>
 </body>
 
 </html>
