--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-<<<<<<< HEAD
-    <p>Chào thầy cô đã tới dự buổi báo cáo của nhóm chúng em hôm nay</p>
-=======
-    <p>Chào thầy cô đã tới dự buổi báo cáo của nhóm chúng em hôm nay , chân thành cảm ơn thầy cô đã lắng nghe</p>
->>>>>>> 61892b79a5977837dc83bfe1891e8388005d42d7
-</body>
-
+  <body>
+    <p>
+      Chào thầy cô đã tới dự buổi báo cáo của nhóm chúng em hôm nay , chân thành
+      cảm ơn thầy cô đã lắng nghe
+    </p>
+  </body>
 </html>
